syntax = "proto3";

message BasicMessageInfo{
    string type = 1;
    string response_topic = 2;
}